--- a/assets/css/produto.css
+++ b/assets/css/produto.css
@@ -1,8 +1,48 @@
 
 
 .produtos{
+    padding: 3rem;
+ 
+}
+.populares__conteudo{
+    display: flex;
+    flex-wrap: wrap;
+    grid-area: conteudo;
+    padding: 1rem 0rem;
+}
+.populares__card {
+    background: #fdfdfd;
     display: grid;
-    grid-template-columns: 33.33%  33.33%  33.33%;
-    grid-template-rows: 20% 20% 20% 20% 20%;
-    background: crimson;
+    grid-template-areas: 
+        "card-imagem"
+        "card-corpo";
+    grid-template-columns: 100%;
+    grid-template-rows: 173px auto;
+    margin-right: 1rem;
+    width: calc(20% - 1rem);
+}
+
+.populares__card___imagem{
+    grid-area: card-imagem;
+    height: 100%;
+    width: 100%;
+}
+
+
+.populares__card___imagem {
+    grid-area: card-imagem;
+    height: 100%;
+    width: 100%;
+}
+
+.populares__card___corpo {
+    display: grid;
+    grid-row-gap: .5rem;
+    grid-area: card-corpo;
+    grid-row-gap: .5rem;
+    grid-template-areas: 
+        "card-cabecalho"
+        "card-conteudo";
+    grid-template-rows: 50px auto;
+    padding: .75rem;
 }
