--- a/assets/css/submenu.css
+++ b/assets/css/submenu.css
@@ -9,6 +9,7 @@
 
 #lista-submenu{
     display: flex;
+    flex-wrap: wrap;
     grid-column: 3/ 8;
     grid-row: 1/3;
     padding: 32px 0px 16px;
@@ -29,7 +30,6 @@
     padding: 8px 0px 32px;
     text-align: center;
     margin-left: 1.5rem;
-    
 }
 
 .legenda-submenu{
