--- a/assets/css/produto.css
+++ b/assets/css/produto.css
@@ -1,7 +1,5 @@
-
-
 .produtos{
-    padding: 3rem;
+    padding: 3rem 5rem;
  
 }
 .populares__conteudo{
@@ -17,9 +15,8 @@
         "card-imagem"
         "card-corpo";
     grid-template-columns: 100%;
-    grid-template-rows: 173px auto;
     margin-right: 1rem;
-    width: calc(20% - 1rem);
+   
 }
 
 .populares__card___imagem{
