alterando menu responsivo

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -34,8 +34,38 @@
         margin-right: 0;
     }
 }
+@media screen and (max-width: 800px){
+    .menu__lista{
+        position:static;
+        overflow: hidden; 
+        max-height: 0;
+        transition: all .4s; 
+    }
+
+    label[for="bt-menu"]{
+        display: block;
+    }
+    
+    #bt-menu:checked ~ .menu{
+        margin-left: 0;
+    }
+
+
+    .menu{
+        margin-top: 5px;
+        display: none;
+        margin-left: -100%;
+        transition: all .4s;
+    }
+
+}
+
+
+
+
 
 @media screen and (max-width: 768px) {
+
     .banners{
         justify-content:space-between;
         
@@ -97,12 +127,24 @@
 }
 
 @media screen and (min-width: 992px) {
+    #bt-menu{
+        display: none;
+    }
+    label[for="bt-menu"]{
+        display: none;
+    }
     .populares__card{
         width: calc(33.33% - 1rem);
     }
 }
 
 @media screen and (min-width: 1200px) {
+    #bt-menu{
+        display: none;
+    }
+    label[for="bt-menu"]{
+        display: none;
+    }
     .populares__card{
         margin-bottom: 0;
         width: calc(20% - 1rem);
