--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -1,3 +1,14 @@
+label[for="bt-menu"]{
+    padding: 5px;
+    background: #0071c5;
+    color: cornsilk;
+    text-align: center;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+}
+
+
 .menu{
     display: grid;
     
@@ -6,9 +17,8 @@
 
 
 
-
 .menu__link{
-    
+  
     flex-wrap: wrap;
     padding: 28px 8px;
     color: #0071c5;
@@ -24,7 +34,7 @@
     
 }
 .menu__item{
-    
+    float: left;
    padding-top: 1rem;  
 }
  
@@ -36,6 +46,7 @@
  
  
  .search{
+     
      margin-top: -3%;
     display: flex;
     margin-left: 82%;
