--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,8 @@
     grid-template-areas: 
         "cabecalho"
         "conteudo"
-        "rodape";
+        "rodape"
+        "bt-menu";
     grid-template-columns: auto;
     grid-template-rows: 110px auto auto; 
 }
