--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -27,11 +27,12 @@
  
  #banner3{
     flex-wrap: wrap;
-    background-color:#0071c5;
+    background-color:#0070c593;
     padding: 30px;
     color: cornsilk;
     grid-column: 2 / 5;
     grid-row: 3 / 8;
+   
   
 }
 
