--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -1,67 +1,68 @@
-label[for="bt-menu"]{
-    padding: 5px;
-    background: #0071c5;
-    color: cornsilk;
-    text-align: center;
-    width: 30px;
-    height: 30px;
+
+
+.bt-menu{
     cursor: pointer;
+    margin-right: 2px;
+    display: none;
 }
 
+
+
+*{
+    margin: 0;
+    padding: 0;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
 
 .menu{
     display: grid;
-    
+    width: 100%;
+    height: 50px;
 }
 
-
-
-
-.menu__link{
-  
-    flex-wrap: wrap;
-    padding: 28px 8px;
-    color: #0071c5;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-.ativo{
+#ativo{
     background: #0071c5;
     color: white;
-    font-size: 25px;
+    font-size: 30px;
     font-weight: 700;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin: 0 16px 0 0;
+    padding-bottom: 31px;
     
-}
-.menu__item{
-    float: left;
-   padding-top: 1rem;  
-}
- 
-.icon{
-    float: right;
-    margin-right: 20rem;
-    margin-top: 0.3rem;
-}
- 
- 
- .search{
-     
-     margin-top: -3%;
-    display: flex;
-    margin-left: 82%;
-    float: right;
-    background: #dfdbdb;
-    
-}
- 
-#txtBusca, .lupa{
-    border: none;
-    background: #e9e1e1;
-    padding: 28px 12px;
-   
 }
 
-#txtBusca{
-    padding-right: 70px;
+
+.menu__lista{
+    position: relative;
 }
+
+
+.menu__item{
+    width: 160px;
+    float: left;
+    background: rgb(248, 248, 248);
+}
+.menu__link:hover{
+    color: darkblue;
+    font-size: 17px;
+}
+.menu__link{
+    padding: 15px;
+    display: block;
+    text-align: center;
+    color: blue;
+}
+
+.lupa {
+    position: absolute; 
+    left: 300;
+    margin-top: 1rem;
+    padding: 10px
+  }
+  #txtBusca {
+    margin-top: 0.5rem;
+    padding-left: 55px;
+    border: none;
+    padding: 20px;
+    text-align: right;
+    background-color: rgb(240, 233, 233);
+} 
+
